--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -19,17 +19,19 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/static/blauw.png" alt="cursussen"> <!--source afbeeling nog veranderen-->
+              <img class="d-block w-100" src="/static/code.png" alt="cursussen"> <!--source afbeeling nog veranderen-->
               <div class="carousel-caption d-none d-md-block">
-                <h5>Onze Cursussen</h5>
+                <h3 class=whitetext">Onze Cursussen</h5>
                 <p>all onze cursussen</p>
               </div>
             </div>
             {% for cursus in cursussen %}
             <div class="carousel-item">
-              <img class="d-block w-100" src="/static/blauw.png" alt={{cursus.language}}> <!-- source afbeeling nog veranderen -->
+              <img class="d-block w-100" src="/static/code.png" alt={{cursus.language}}> <!-- source afbeeling nog veranderen -->
               <div class="carousel-caption d-none d-md-block">
-                <h5>{{cursus.language}}</h5>
+                <a href="{{ url_for('standaard.cursus', language=cursus.language, course_id=cursus.id)}}">
+                  <h3 class="whitetext">{{cursus.language}}</h5> 
+                </a>
                 <p>{{cursus.description}}</p>
               </div>
             </div>
