--- a/project/templates/cursus.html
+++ b/project/templates/cursus.html
@@ -15,16 +15,42 @@
     <p> <b>Docent:</b> {{ course.username}} </p>
     <p> <b>Locatie:</b> {{ course.location}} </p>
     <p> <b>Omschrijving:</b> {{ course.description }} </p>
+    <br>
+
+        
 </div>
-
-
-
 <div class="col-sm-12">
 
-{% if current_user.is_authenticated %}
-<a href="{{ url_for('student.inschrijven', language_id=course.language_id, course_id=course.id)}}" class="btn btn-dark">Inschrijven</a>
-{% endif %}
+    {% if current_user.is_authenticated %}
+    <a href="{{ url_for('student.inschrijven', language_id=course.language_id, course_id=course.id)}}" class="btn btn-dark">Inschrijven</a>
+    {% endif %}
+    
+</div>
+
+<div class="jumbotron m-0">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Omschrijving</th>
+                <th scope="col">Starttijd</th>
+                <th scope="col">Eindtijd</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for lecture in lectures %}
+            <tr>
+                <td>{{ lecture.lecture_name }}</td>
+                <td>{{ lecture.start_time}}</td>
+                <td>{{ lecture.end_time }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
 </div>
+
+
+
+
 
 {% endblock %}
